--- a/package.json
+++ b/package.json
@@ -8,14 +8,19 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "axios": "^0.19.0",
     "dotenv": "^8.2.0",
     "expo": "^35.0.0",
     "expo-facebook": "^7.0.0",
+    "latlng-to-zip": "0.0.2",
+    "lodash": "^4.17.15",
+    "qs": "^6.9.1",
     "react": "16.8.3",
     "react-dom": "16.8.3",
     "react-native": "https://github.com/expo/react-native/archive/sdk-35.0.0.tar.gz",
     "react-native-elements": "^1.2.7",
     "react-native-gesture-handler": "^1.3.0",
+    "react-native-maps": "^0.26.1",
     "react-native-reanimated": "^1.4.0",
     "react-native-web": "^0.11.7",
     "react-navigation": "^4.0.10",
