--- a/package.json
+++ b/package.json
@@ -10,18 +10,18 @@
   "dependencies": {
     "axios": "^0.19.0",
     "dotenv": "^8.2.0",
-    "expo": "^35.0.0",
-    "expo-facebook": "^7.0.0",
+    "expo": "^36.0.0",
+    "expo-facebook": "~8.0.0",
     "latlng-to-zip": "0.0.2",
     "lodash": "^4.17.15",
     "qs": "^6.9.1",
-    "react": "16.8.3",
-    "react-dom": "16.8.3",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-35.0.0.tar.gz",
+    "react": "16.9.0",
+    "react-dom": "16.9.0",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
     "react-native-elements": "^1.2.7",
-    "react-native-gesture-handler": "^1.3.0",
-    "react-native-maps": "^0.26.1",
-    "react-native-reanimated": "^1.4.0",
+    "react-native-gesture-handler": "~1.5.0",
+    "react-native-maps": "0.26.1",
+    "react-native-reanimated": "~1.4.0",
     "react-native-web": "^0.11.7",
     "react-navigation": "^4.0.10",
     "react-navigation-stack": "^1.10.3",
@@ -31,7 +31,7 @@
     "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
-    "babel-preset-expo": "^7.1.0",
+    "babel-preset-expo": "^8.0.0",
     "react-native-dotenv": "^0.2.0"
   },
   "private": true
